# med-triage-chat

./: .gitignore  README.md
clinicai/: .env.backup  DEPLOYMENT.md  Dockerfile  MONGODB_SETUP.md  Makefile  PASSO_A_PASSO_MONGODB.md  QUICK_START.md  README.md  check_credentials.py  check_gemini_models.py  clean_db.py  clean_mongodb.py  clean_mongodb_direct.py  clinicai.db  clinicai_mongodb.py  clinicai_mongodb_fixed.py  clinicai_whatsapp.py  configure_whatsapp.py  debug_app.py  debug_first_question.py  debug_gemini_processing.py  demo_fallback_system.py  docker-compose.yml  env.example  env.mongodb  env.whatsapp  fallback_system_explained.md  gemini_status_report.md  health_check.py  init-mongo.js  install_ngrok.ps1  install_ngrok_simple.ps1  main.py  mongodb_database.py  pyproject.toml  requirements.txt  run_dev.py  run_simple.py  setup.py  setup_gemini.py  (+20 more)
clinicai/app/: __init__.py  config.py  db.py  llm.py  main.py  schemas.py  whatsapp.py
clinicai/app/graph/: __init__.py  nodes.py  prompts.py  state.py  workflow.py
clinicai/app/utils/: __init__.py  emergency.py  logging.py  security.py
clinicai/tests/: __init__.py  test_emergency.py  test_extraction.py  test_webhook.py
